--- a/package.json
+++ b/package.json
@@ -9,8 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.1.1",
     "@tailwindcss/vite": "^4.1.6",
+    "axios": "^1.9.0",
+    "chart.js": "^4.4.9",
+    "json-server": "^1.0.0-beta.3",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.4",
     "tailwindcss": "^4.1.6",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
